# mwa_skymap

./: .gitignore  README.md  map.txt  pyproject.toml  release.md
.github/workflows/: release.yml
mwa_skymap/: mwaplot.py  plotmwa.py  skymap.py
