[project]
name = "mwa_skymap"
version = "0.1.1"
description = "Generates all-sky maps and movies for MWA telescope observations"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [ { name = "Andrew Williams", email = "Andrew.Williams@curtin.edu.au" } ]

requires-python = ">=3.10"
dependencies = [
    "apng",
    "click",
    "astropy",
    "requests",
    "mwa_hyperbeam",
    "ephem",
    "matplotlib",
    "basemap",
    "basemap_data",
    "imageio[pyav]"
]

[project.urls]
Source = "https://github.com/MWATelescope/mwa_skymap"

[project.scripts]
skymap = "mwa_skymap.skymap:cli"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
